# AnthMorph

./: .gitignore  ANTHMORPH_ROADMAP.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: package-linux-termux.yml  package-macos-arm64.yml
docs/: CLAUDE_CODE_SETUP.md  CLIENT_COMPATIBILITY.md  GITHUB_ABOUT.md  IMPROVEMENT_PLAN_2026-04-17.md  PACKAGING.md  RELEASE.md
prebuilt/: anthmorph
prebuilt/darwin-arm64/: anthmorph
scripts/: anthmorph-secret  anthmorph-service-run  anthmorphctl  docker_build_linux.sh  docker_npm_dry_run.sh  docker_release_checks.sh  docker_rust_test.sh  docker_secret_scan.sh  postinstall.js  smoke_test.sh  test_claude_code_patterns_real.sh  test_deepseek4_direct.sh  write_default_config.py
src/: config.rs  error.rs  main.rs  model_cache.rs  proxy.rs  rate_limiter.rs  tool_names.rs  transform.rs
src/models/: anthropic.rs  openai.rs  responses.rs
src/tool_parsers/: deepseek.rs  glm47.rs  kimi.rs  mistral.rs  mod.rs  qwen.rs
tests/: real_backends.rs
