[package]
name = "AnthMorph"
version = "0.1.6"
edition = "2021"
description = "Anthropic to OpenAI-compatible proxy"
license = "MIT"
repository = "https://github.com/DioNanos/AnthMorph"
homepage = "https://github.com/DioNanos/AnthMorph"
authors = ["Davide A. Guglielmi"]

[[bin]]
name = "anthmorph"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "signal"] }

# Web framework
axum = { version = "0.7", features = ["http2"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Environment variables
dotenvy = "0.15"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Server utilities
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async streams
async-stream = "0.3"
bytes = "1.9"
pin-project = "1.1"
sha1 = "0.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
